# TalentLens

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  embeddings.py  frontend.py  graph.py  ingestion.py  logging_config.py  main.py  pyproject.toml  vectorstore.py
agents/: __init__.py  bias_auditor.py  scorer.py  screener.py
api/: main.py
data/uploads/: .gitkeep
evaluation/: __init__.py  dashboard.py  metrics.py  run_eval.py
evaluation/test_data/: synthetic.json
preprocessing/: __init__.py  anonymizer.py  chunker.py  parser.py
results/: .gitkeep
tests/: __init__.py  test_anonymizer.py  test_chunker.py  test_parser.py  test_scorer_models.py
