[project]
name = "resume-screener"
version = "0.1.0"
description = "Multi-agent AI Resume Screener with RAG, structured scoring, and bias auditing"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Resume Screener Team" }]

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",

    # Agents / LLM
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",
    "openai>=1.30.0",

    # Vector DB
    "chromadb>=0.5.0",

    # NLP & Parsing
    "spacy>=3.7.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",

    # Evaluation
    "ragas>=0.1.10",

    # Observability
    "structlog>=24.1.0",
    "tenacity>=8.3.0",

    # Dashboard
    "streamlit>=1.35.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
